--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta http-equiv="refresh" content="0; url=https://www.example.com" />
+  <meta http-equiv="refresh" content="0; url=https://claude.site/artifacts/26a8417e-225e-4ad4-9795-0ac2270292f0" />
   <title>Redirecting...</title>
 </head>
 <body>
