--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <title>Redirecting...</title>
 </head>
 <body>
-  <p>If you are not redirected automatically, follow this <a href="https://www.example.com">link</a>.</p>
+  <p>If you are not redirected automatically, follow this <a href="https://claude.site/artifacts/26a8417e-225e-4ad4-9795-0ac2270292f0">link</a>.</p>
 </body>
 </html>
